Исправление замечаний с гит-хаба

--- a/index.html
+++ b/index.html
@@ -14,100 +14,86 @@
 <body>
 
   <header class="main-header">
-
     <div class="container">
-      <div class="header-container">
-        
-          <a class="logo">Device</a>       
-
-        <div class="header-wrapper">
-
-          <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-            <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-            <input id="search-field" name="search" type="search" placeholder="Поиск по сайту">
-            <button class="btn-search" type="submit">Найти</button>
-          </form>
-          <nav aria-label="Меню пользователя">
-            <ul class="user-menu-list">
-              <li class="user-enter user-menu-item">
-                <a class="link-user-menu" href="#">Валентин Петухов</a>
-              </li>
-              <li class="user-exit user-menu-item">
-                <a class="link-user-menu" href="#">Выйти</a>
-              </li>
-              <li class="user-menu-item">
-                <a class="link-user-menu" href="#">Сравнить</a>
-              </li>
-              <li class="user-menu-item">
-                <a class="link-user-menu" href="#">Корзина</a>
-              </li>
-            </ul>
-          </nav>
-
-        </div>
-
-        <nav aria-label="Главное меню">
-          <ul class="main-menu-list">
-            <li class="main-menu-item" aria-haspopup="true">
-              <a class="link" href="#">Каталог таваров</a>
-              <ul class="sub-menu-list" aria-label="Разделы каталога">
-                <li class="sub-menu-item">
-                  <ul class="video-gadgets-list" aria-label="Видео гаджеты">
-                    <li class="video-gadgets-item">
-                      <a class="link-user-menu" href="#">Виртуальная реальность</a>
-                    </li>
-                    <li class="video-gadgets-item">
-                      <a class="link-user-menu" href="monopods-for-selfi.html">Моноподы для слефи</a>
-                    </li>
-                    <li class="video-gadgets-item">
-                      <a class="link-user-menu" href="#">Экшн-камеры</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="sub-menu-item">
-                  <ul class="wrist-accessories-list" aria-label="Наручные аксессуары">
-                    <li class="wrist-accessories-item">
-                      <a class="link-user-menu" href="#">Фитнес-браслеты</a>
-                    </li>
-                    <li class="wrist-accessories-item">
-                      <a class="link-user-menu" href="#">Умные часы</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="sub-menu-item">
-                  <ul class="quadcopters-list" aria-label="Квадрокоптеры">
-                    <li class="quadcopters-item">
-                      <a class="link-user-menu" href="#">Квадрокоптеры</a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
+      <a class="logo">Device</a>
+      <div class="header-wrapper">
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+          <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+          <input id="search-field" name="search" type="search" placeholder="Поиск по сайту">
+          <button class="btn-search" type="submit">Найти</button>
+        </form>
+        <nav aria-label="Меню пользователя">
+          <ul class="user-menu-list">
+            <li class="user-menu-item">
+              <a class="link-user-menu" href="#">Войти</a>
             </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#services-section">Доставка</a>
+            <li class="user-menu-item visually-hidden">
+              <a class="link-user-menu" href="#">Выйти</a>
             </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#services-section">Гарантия</a>
+            <li class="user-menu-item">
+              <a class="link-user-menu" href="#">Сравнить</a>
             </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#contacts-section">Контакты</a>
+            <li class="user-menu-item">
+              <a class="link-user-menu" href="#">Корзина</a>
             </li>
           </ul>
         </nav>
-
       </div>
+      <nav aria-label="Главное меню">
+        <ul class="main-menu-list">
+          <li class="main-menu-item" aria-haspopup="true">
+            <a class="link" href="#">Каталог таваров</a>
+            <ul class="sub-menu-list" aria-label="Разделы каталога">
+              <li class="sub-menu-item">
+                <ul class="video-gadgets-list" aria-label="Видео гаджеты">
+                  <li class="video-gadgets-item">
+                    <a class="link-user-menu" href="#">Виртуальная реальность</a>
+                  </li>
+                  <li class="video-gadgets-item">
+                    <a class="link-user-menu" href="monopods-for-selfi.html">Моноподы для слефи</a>
+                  </li>
+                  <li class="video-gadgets-item">
+                    <a class="link-user-menu" href="#">Экшн-камеры</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="sub-menu-item">
+                <ul class="wrist-accessories-list" aria-label="Наручные аксессуары">
+                  <li class="wrist-accessories-item">
+                    <a class="link-user-menu" href="#">Фитнес-браслеты</a>
+                  </li>
+                  <li class="wrist-accessories-item">
+                    <a class="link-user-menu" href="#">Умные часы</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="sub-menu-item">
+                <ul class="quadcopters-list" aria-label="Квадрокоптеры">
+                  <li class="quadcopters-item">
+                    <a class="link-user-menu" href="#">Квадрокоптеры</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Доставка</a>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Гарантия</a>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
     </div>
-
   </header>
 
   <main class="index">
-
     <h1 class="visually-hidden">Магазин Device</h1>
-
     <section class="promo">
-
       <div class="container">
-
         <h2 class="visually-hidden">Наши лучшие товары</h2>
         <div class="promo-slider">
           <input class="visually-hidden" id="promo-slide1" name="promo-slides" type="radio" checked>
@@ -116,7 +102,7 @@
           <ol class="promo-list">
             <li class="promo-item">
               <div class="promo-column">
-                <img src="img/slider-1.png" width="384" height="486" alt="Палка для селфи длиной 8 метров: &#8220;Делай селфи как Бен Стилер!&#8221;">
+                <img src="img/slider-1.png" width="384" height="486" alt="Палка для селфи длиной 8 метров. Делай селфи как Бен Стилер!">
               </div>
               <div class="promo-column">
                 <p class="promo-item-title">01</p>
@@ -139,7 +125,7 @@
             </li>
             <li class="promo-item">
               <div class="promo-column">
-                <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующий фитнес-браслет: &#8220;Я вижу, сто ты снова ешь&#8221;">
+                <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующий фитнес-браслет. Я вижу, сто ты снова ешь!">
               </div>
               <div class="promo-column">
                 <p class="promo-item-title">02</p>
@@ -149,20 +135,16 @@
                 <table class="product-properties">
                   <tr class="value">
                     <td>48 часов</td>
-                    <td></td>
-                    <td></td>
                   </tr>
                   <tr class="property">
                     <td>Без подзарядки</td>
-                    <td></td>
-                    <td></td>
                   </tr>
                 </table>
               </div>
             </li>
             <li class="promo-item">
               <div class="promo-column">
-                <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер: &#8220;Порхает как бабочка, жалит как пчела!&#8221;">
+                <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер. Порхает как бабочка, жалит как пчела!">
               </div>
               <div class="promo-column">
                 <p class="promo-item-title">03</p>
@@ -173,12 +155,10 @@
                   <tr class="value">
                     <td>800 м</td>
                     <td>50 м</td>
-                    <td></td>
                   </tr>
                   <tr class="property">
                     <td>Дальность полета</td>
                     <td>Радиус поражения</td>
-                    <td></td>
                   </tr>
                 </table>
               </div>
@@ -190,58 +170,35 @@
             <label for="promo-slide3" tabindex="0">Слайдер-3</label>
           </div>
         </div>
-
-
       </div>
-
     </section>
-
     <section class="popular-product">
-
       <div class="container">
-
         <h2 class="visually-hidden">Популярные продукты</h2>
         <ul class="popular-product-list">
           <li class="popular-product-item">
-            <a class="link" href="#">
-              <h3 class="popular-product-title">Виртуальная реальность</h3>
-            </a>
+            <a class="link" href="#">Виртуальная реальность</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="monopods-for-selfi.html">
-              <h3 class="popular-product-title">Моноподы <br>для селфи</h3>
-            </a>
+            <a class="link" href="monopods-for-selfi.html">Моноподы для селфи</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="#">
-              <h3 class="popular-product-title">Экшн-камеры</h3>
-            </a>
+            <a class="link" href="#">Экшн-камеры</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="#">
-              <h3 class="popular-product-title">Фитнес-браслеты</h3>
-            </a>
+            <a class="link" href="#">Фитнес-браслеты</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="#">
-              <h3 class="popular-product-title">Умные часы</h3>
-            </a>
+            <a class="link" href="#">Умные часы</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="#">
-              <h3 class="popular-product-title">Квадракоптеры</h3>
-            </a>
+            <a class="link" href="#">Квадракоптеры</a>
           </li>
         </ul>
-
       </div>
-
     </section>
-
     <section class="services" id="services-section">
-
       <div class="container">
-
         <h2 class="visually-hidden">Услуги</h2>
         <div class="services-slider">
           <input class="visually-hidden" id="services-slide1" name="services-slides" type="radio" checked>
@@ -273,15 +230,10 @@
             </li>
           </ul>
         </div>
-
       </div>
-
     </section>
-
     <section class="our-partner">
-
       <div class="container">
-
         <h2 class="visually-hidden">Наши партнёры</h2>
         <ul class="our-partner-list">
           <li class="our-partner-item">
@@ -305,12 +257,9 @@
             </a>
           </li>
         </ul>
-
       </div>
     </section>
-
     <div class="container">
-
       <section class="about-us">
         <h2 class="section-title">О нас</h2>
         <p class="content">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас. </p>
@@ -328,7 +277,6 @@
         </ul>
         <a href="#" class="link btn">Подробнее о нас</a>
       </section>
-
       <section class="contacts" id="contacts-section">
         <h2 class="section-title">Контакты</h2>
         <p class="content">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
@@ -337,9 +285,7 @@
         </div>
         <a href="#" class="link btn">Напишите нам</a>
       </section>
-
     </div>
-
     <!--    popup к секции services-->
     <section class="modal-write-us">
       <h2 class="visually-hidden">Свяжитесь с нами</h2>
@@ -360,7 +306,6 @@
       </form>
       <button class="modal-close" type="button" tabindex="0">Закрыть окно</button>
     </section>
-
     <!--    popup к секции contacts-->
     <section class="modal-map">
       <h2 class="visually-hidden">Как нас найти</h2>
@@ -369,72 +314,62 @@
       </div>
       <button class="modal-close" type="button" tabindex="0">Закрыть окно</button>
     </section>
-
   </main>
 
-
   <footer class="main-footer">
-
-    <div class="container">
-
-      <div class="footer-top">        
-          <a class="logo">Device</a>        
-        <div class="user-menu">
-          <ul class="user-menu-list" aria-label="Меню пользователя в футере">
-            <li class="user-enter user-menu-item">
-              <a class="link-user-menu" href="#">Валентин Петухов</a>
-            </li>
-            <li class="user-exit user-menu-item">
-              <a class="link-user-menu" href="#">Выйти</a>
-            </li>
-            <li class="user-menu-item">
-              <a class="link-user-menu" href="#">Сравнить</a>
-            </li>
-            <li class="user-menu-item">
-              <a class="link-user-menu" href="#">Корзина</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-middle">
-        <p class="address content">г.Москва ул.Строителей, 15</p>
-        <div class="main-menu">
-          <ul class="main-menu-list" aria-label="Главное меню в футере">
-            <li class="main-menu-item">
-              <a class="link" href="index.html#services-section">Доставка</a>
-            </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#services-section">Гарантия</a>
-            </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#contacts-section">Контакты</a>
-            </li>
-          </ul>
-        </div>
-        <p class="phone content">Тел:+7(495)495-95-95</p>
-      </div>
-      <div class="footer-bottom">
-        <ul class="social-list" aria-label="Список социальных сетей">
-          <li class="social-item">
-            <a href="https://ru-ru.facebook.com/" target="_blank">Facebook</a>
+    <div class="footer-top">
+      <a class="logo">Device</a>
+      <div class="user-menu">
+        <ul class="user-menu-list" aria-label="Меню пользователя в футере">
+          <li class="user-menu-item">
+            <a class="link-user-menu" href="#">Войти</a>
           </li>
-          <li class="social-item">
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+          <li class="user-menu-item visually-hidden">
+            <a class="link-user-menu" href="#">Выйти</a>
           </li>
-          <li class="social-item">
-            <a href="https://twitter.com/?lang=ru" target="_blank">Twitter</a>
+          <li class="user-menu-item">
+            <a class="link-user-menu" href="#">Сравнить</a>
+          </li>
+          <li class="user-menu-item">
+            <a class="link-user-menu" href="#">Корзина</a>
           </li>
         </ul>
-        <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-          <img src="img/logo-html.svg" alt="Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1">
-<!--          псевдоэдемент?-->
-        </a>
       </div>
-
     </div>
-
+    <div class="footer-middle">
+      <p class="address content">г.Москва ул.Строителей, 15</p>
+      <div class="main-menu">
+        <ul class="main-menu-list" aria-label="Главное меню в футере">
+          <li class="main-menu-item">
+            <a class="link" href="#">Доставка</a>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Гарантия</a>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </div>
+      <p class="phone content">Тел:+7(495)495-95-95</p>
+    </div>
+    <div class="footer-bottom">
+      <ul class="social-list" aria-label="Список социальных сетей">
+        <li class="social-item">
+          <a href="https://ru-ru.facebook.com/" target="_blank">Facebook</a>
+        </li>
+        <li class="social-item">
+          <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+        </li>
+        <li class="social-item">
+          <a href="https://twitter.com/?lang=ru" target="_blank">Twitter</a>
+        </li>
+      </ul>
+      <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
+          <img src="img/logo-html.svg" alt="Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1">
+        </a>
+    </div>
   </footer>
-
 
   <script src="js/main.js"></script>
 
