--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -12,94 +12,83 @@
 <body>
 
   <header class="main-header">
-
     <div class="container">
-      <div class="header-container">
-
-        <a class="logo" href="index.html">Device</a>
-
-        <div class="header-wrapper">
-
-          <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-            <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-            <input id="search-field" name="search" type="search" placeholder="Поиск по сайту">
-            <button class="btn-search" type="submit">Найти</button>
-          </form>
-          <nav class="user-menu" aria-label="Меню пользователя">
-            <ul class="user-menu-list">
-              <li class="user-enter user-menu-item">
-                <a class="link-user-menu" href="#">Валентин Петухов</a>
-              </li>
-              <li class="user-exit user-menu-item">
-                <a class="link-user-menu" href="#">Выйти</a>
-              </li>
-              <li class="user-menu-item">
-                <a class="link-user-menu" href="#">Сравнить</a>
-              </li>
-              <li class="user-menu-item">
-                <a class="link-user-menu" href="#">Корзина</a>
-              </li>
-            </ul>
-          </nav>
-
-        </div>
-
-        <nav aria-label="Главное меню">
-          <ul class="main-menu-list">
-            <li class="main-menu-item" aria-haspopup="true">
-              <a class="link" href="#">Каталог таваров</a>
-              <ul class="sub-menu-list" aria-label="Разделы каталога">
-                <li class="sub-menu-item">
-                  <ul class="video-gadgets-list" aria-label="Видео гаджеты">
-                    <li class="video-gadgets-item">
-                      <a class="link-user-menu" href="#">Виртуальная реальность</a>
-                    </li>
-                    <li class="video-gadgets-item" aria-current="page">
-                      <a>Моноподы для слефи</a>
-                    </li>
-                    <li class="video-gadgets-item">
-                      <a class="link-user-menu" href="#">Экшн-камеры</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="sub-menu-item">
-                  <ul class="wrist-accessories-list" aria-label="Наручные аксессуары">
-                    <li class="wrist-accessories-item">
-                      <a class="link-user-menu" href="#">Фитнес-браслеты</a>
-                    </li>
-                    <li class="wrist-accessories-item">
-                      <a class="link-user-menu" href="#">Умные часы</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="sub-menu-item">
-                  <ul class="quadcopters-list" aria-label="Квадрокоптеры">
-                    <li class="quadcopters-item">
-                      <a class="link-user-menu" href="#">Квадрокоптеры</a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
+      <a class="logo" href="index.html">Device</a>
+      <div class="header-wrapper">
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+          <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+          <input id="search-field" name="search" type="search" placeholder="Поиск по сайту">
+          <button class="btn-search" type="submit">Найти</button>
+        </form>
+        <nav class="user-menu" aria-label="Меню пользователя">
+          <ul class="user-menu-list">
+            <li class="user-menu-item">
+              <a class="link-user-menu" href="#">Валентин Петухов</a>
             </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#services-section">Доставка</a>
+            <li class="user-menu-item">
+              <a class="link-user-menu" href="#">Выйти</a>
             </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#services-section">Гарантия</a>
+            <li class="user-menu-item">
+              <a class="link-user-menu" href="#">Сравнить</a>
             </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#contacts-section">Контакты</a>
+            <li class="user-menu-item">
+              <a class="link-user-menu" href="#">Корзина</a>
             </li>
           </ul>
         </nav>
-
       </div>
+      <nav aria-label="Главное меню">
+        <ul class="main-menu-list">
+          <li class="main-menu-item" aria-haspopup="true">
+            <a class="link" href="#">Каталог таваров</a>
+            <ul class="sub-menu-list" aria-label="Разделы каталога">
+              <li class="sub-menu-item">
+                <ul class="video-gadgets-list" aria-label="Видео гаджеты">
+                  <li class="video-gadgets-item">
+                    <a class="link-user-menu" href="#">Виртуальная реальность</a>
+                  </li>
+                  <li class="video-gadgets-item" aria-current="page">
+                    <a>Моноподы для слефи</a>
+                  </li>
+                  <li class="video-gadgets-item">
+                    <a class="link-user-menu" href="#">Экшн-камеры</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="sub-menu-item">
+                <ul class="wrist-accessories-list" aria-label="Наручные аксессуары">
+                  <li class="wrist-accessories-item">
+                    <a class="link-user-menu" href="#">Фитнес-браслеты</a>
+                  </li>
+                  <li class="wrist-accessories-item">
+                    <a class="link-user-menu" href="#">Умные часы</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="sub-menu-item">
+                <ul class="quadcopters-list" aria-label="Квадрокоптеры">
+                  <li class="quadcopters-item">
+                    <a class="link-user-menu" href="#">Квадрокоптеры</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Доставка</a>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Гарантия</a>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
     </div>
-
   </header>
 
   <main class="monopods">
-
     <h1 class="section-title">Моноподы для селфи</h1>
     <ul class="breadcrumbs-list" aria-label="Навигационная цепочка">
       <li class="breadcrumbs-item">
@@ -112,9 +101,7 @@
         <span class="link-breadcrumbs">Моноподы для селфи</span>
       </li>
     </ul>
-
     <div class="monopods-container">
-
       <section class="filter">
         <h2 class="catalog-title">Фильтр:</h2>
         <form class="filter-form" action="https://echo.htmlacademy.ru" method="get">
@@ -129,10 +116,10 @@
                 <div class="range-toggle range-toggle-max" tabindex="0" aria-label="Выберите максимальное значение"></div>
               </div>
               <label>
-                от<input class="min-price" name="price" type="text" placeholder="0" pattern="[0-9]{,5}">
+                от<input class="min-price" name="price" type="text" placeholder="0" pattern="[0-9]{0,5}">
               </label>
               <label>
-                до<input class="max-price" id="maxprice-field" name="price" type="text" placeholder="5000" pattern="[0-9]{,5}">
+                до<input class="max-price" id="maxprice-field" name="price" type="text" placeholder="5000" pattern="[0-9]{0,5}">
               </label>
             </div>
           </fieldset>
@@ -177,7 +164,6 @@
           <button class="link btn" type="submit">Показать</button>
         </form>
       </section>
-
       <section class="catalog">
         <h2 class="visually-hidden">Товары раздела Моноподы для селфи</h2>
         <p class="catalog-title">Сортировка:</p>
@@ -268,70 +254,62 @@
           </li>
         </ul>
       </section>
-
     </div>
-
   </main>
 
   <footer class="main-footer">
-
-    <div class="container">
-
-      <div class="footer-top">
-        <a class="logo" href="index.html">Device</a>
-        <div class="user-menu">
-          <ul class="user-menu-list" aria-label="Меню пользователя в футере">
-            <li class="user-enter user-menu-item">
-              <a class="link-user-menu" href="#">Валентин Петухов</a>
-            </li>
-            <li class="user-exit user-menu-item">
-              <a class="link-user-menu" href="#">Выйти</a>
-            </li>
-            <li class="userm-menu-item">
-              <a class="link-user-menu" href="#">Сравнить</a>
-            </li>
-            <li class="user-menu-item">
-              <a class="link-user-menu" href="#">Корзина</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-middle">
-        <p class="adress content">г.Москва ул.Строителей, 15</p>
-        <div class="main-menu">
-          <ul class="main-menu-list" aria-label="Главное меню в футере">
-            <li class="main-menu-item">
-              <a class="link" href="index.html#services-section">Доставка</a>
-            </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#services-section">Гарантия</a>
-            </li>
-            <li class="main-menu-item">
-              <a class="link" href="index.html#contacts-section">Контакты</a>
-            </li>
-          </ul>
-        </div>
-        <p class="phone content">Тел:+7(495)495-95-95</p>
-      </div>
-      <div class="footer-bottom">
-        <ul class="social-list" aria-label="Список социальных сетей">
-          <li class="social-item">
-            <a href="https://ru-ru.facebook.com/" target="_blank">Facebook</a>
+    <div class="footer-top">
+      <a class="logo" href="index.html">Device</a>
+      <div class="user-menu">
+        <ul class="user-menu-list" aria-label="Меню пользователя в футере">
+          <li class="user-menu-item">
+            <a class="link-user-menu" href="#">Валентин Петухов</a>
           </li>
-          <li class="social-item">
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+          <li class="user-menu-item">
+            <a class="link-user-menu" href="#">Выйти</a>
           </li>
-          <li class="social-item">
-            <a href="https://twitter.com/?lang=ru" target="_blank">Twitter</a>
+          <li class="userm-menu-item">
+            <a class="link-user-menu" href="#">Сравнить</a>
+          </li>
+          <li class="user-menu-item">
+            <a class="link-user-menu" href="#">Корзина</a>
           </li>
         </ul>
-        <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
+      </div>
+    </div>
+    <div class="footer-middle">
+      <p class="adress content">г.Москва ул.Строителей, 15</p>
+      <div class="main-menu">
+        <ul class="main-menu-list" aria-label="Главное меню в футере">
+          <li class="main-menu-item">
+            <a class="link" href="#">Доставка</a>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Гарантия</a>
+          </li>
+          <li class="main-menu-item">
+            <a class="link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </div>
+      <p class="phone content">Тел:+7(495)495-95-95</p>
+    </div>
+    <div class="footer-bottom">
+      <ul class="social-list" aria-label="Список социальных сетей">
+        <li class="social-item">
+          <a href="https://ru-ru.facebook.com/" target="_blank">Facebook</a>
+        </li>
+        <li class="social-item">
+          <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+        </li>
+        <li class="social-item">
+          <a href="https://twitter.com/?lang=ru" target="_blank">Twitter</a>
+        </li>
+      </ul>
+      <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
         <img src="img/logo-html.svg" alt="Интенсивный онлайн‑курс Профессиональный HTML и CSS,уровень 1">
       </a>
-      </div>
-
     </div>
-
   </footer>
 
   <script src="js/main.js"></script>
