--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <label class="visually-hidden" for="search-field">Поиск по сайту</label>
           <input id="search-field" name="search" type="search" placeholder="Поиск по сайту">
-          <button class="btn-search" type="submit">Найти</button>
+          <button class="btn-search" type="submit" tabindex="-1">Найти</button>
         </form>
         <nav class="user-menu" aria-label="Меню пользователя">
           <ul class="user-menu-list">
