--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -90,18 +90,21 @@
 
   <main class="monopods">
 
-    <h1 class="section-title">Моноподы для селфи</h1>
-    <ul class="breadcrumbs-list" aria-label="Навигационная цепочка">
-      <li class="breadcrumbs-item">
-        <a class="link-breadcrumbs" href="index.html">Главная</a>
-      </li>
-      <li class="breadcrumbs-item">
-        <a class="link-breadcrumbs" href="catalog.html">Каталог товаров</a>
-      </li>
-      <li class="breadcrumbs-item breadcrumbs-current" aria-current="page">
-        <span class="link-breadcrumbs">Моноподы для селфи</span>
-      </li>
-    </ul>
+    <div class="container">
+      <h1 class="section-title">Моноподы для селфи</h1>
+      <ul class="breadcrumbs-list" aria-label="Навигационная цепочка">
+        <li class="breadcrumbs-item">
+          <a class="link-breadcrumbs" href="index.html">Главная</a>
+        </li>
+        <li class="breadcrumbs-item">
+          <a class="link-breadcrumbs" href="catalog.html">Каталог товаров</a>
+        </li>
+        <li class="breadcrumbs-item breadcrumbs-current" aria-current="page">
+          <span class="link-breadcrumbs">Моноподы для селфи</span>
+        </li>
+      </ul>
+    </div>
+    
     <div class="monopods-container">
 
       <section class="filter">
@@ -337,6 +340,7 @@
         })
       });
     }
+
   </script>
   <!-- / PixLayout -->
 
