--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -278,7 +278,7 @@
           <li class="user-menu-item">
             <a class="link-user-menu" href="#">Выйти</a>
           </li>
-          <li class="userm-menu-item">
+          <li class="user-menu-item">
             <a class="link-user-menu" href="#">Сравнить</a>
           </li>
           <li class="user-menu-item">
