--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Моноподы для селфи</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +11,7 @@
 <body>
 
   <header class="main-header">
-    <div class="container">
+    <div class="container container-inner">
       <a class="logo" href="index.html">Device</a>
       <div class="header-wrapper">
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
@@ -204,7 +203,7 @@
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             </p>
             <a class="into-the-backet link btn" href="#">В корзину</a>
-            <a href="#" class=" product-comparison link-user-menu">Добавить к сравнению</a>
+            <a href="#" class="product-comparison link-user-menu">Добавить к сравнению</a>
             <span class="mark-new">New</span>
           </li>
           <li class="catalog-item">
@@ -216,7 +215,7 @@
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             </p>
             <a class="into-the-backet link btn" href="#">В корзину</a>
-            <a href="#" class=" product-comparison link-user-menu">Добавить к сравнению</a>
+            <a href="#" class="product-comparison link-user-menu">Добавить к сравнению</a>
             <span class="mark-new">New</span>
           </li>
           <li class="catalog-item">
@@ -228,7 +227,7 @@
               <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </p>
             <a class="into-the-backet link btn" href="#">В корзину</a>
-            <a href="#" class=" product-comparison link-user-menu">Добавить к сравнению</a>
+            <a href="#" class="product-comparison link-user-menu">Добавить к сравнению</a>
             <span class="mark-new">New</span>
           </li>
           <li class="catalog-item">
@@ -240,7 +239,7 @@
               <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка &#8220;Следуй за мной&#8221;">
             </p>
             <a class="into-the-backet link btn" href="#">В корзину</a>
-            <a href="#" class=" product-comparison link-user-menu">Добавить к сравнению</a>
+            <a href="#" class="product-comparison link-user-menu">Добавить к сравнению</a>
             <span class="mark-new mark-new-active">New</span>
           </li>
         </ul>
