--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -107,7 +107,7 @@
     <div class="monopods-container">
 
       <section class="filter">
-        <div class="wrapper">
+<!--        <div class="wrapper">-->
           <h2 class="catalog-title">Фильтр:</h2>
           <form class="filter-form" action="https://echo.htmlacademy.ru" method="get">
             <fieldset>
@@ -168,12 +168,12 @@
             </fieldset>
             <button class="link btn" type="submit">Показать</button>
           </form>
-        </div>
+<!--        </div>-->
       </section>
 
       <section class="catalog">
        
-        <div class="wrapper">
+<!--        <div class="wrapper">-->
           <h2 class="visually-hidden">Товары раздела Моноподы для селфи</h2>
           <div class="sort-wrapper">
             <p class="catalog-title">Сортировка:</p>
@@ -264,7 +264,7 @@
               <a class="link" href="#">Вперед</a>
             </li>
           </ul>
-        </div>
+<!--        </div>-->
       </section>
 
     </div>
