--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -88,7 +88,6 @@
   </header>
 
   <main class="monopods">
-
     <div class="container">
       <h1 class="section-title">Моноподы для селфи</h1>
       <ul class="breadcrumbs-list" aria-label="Навигационная цепочка">
@@ -103,11 +102,8 @@
         </li>
       </ul>
     </div>
-
     <div class="monopods-container">
-
       <section class="filter">
-<!--        <div class="wrapper">-->
           <h2 class="catalog-title">Фильтр:</h2>
           <form class="filter-form" action="https://echo.htmlacademy.ru" method="get">
             <fieldset>
@@ -168,12 +164,8 @@
             </fieldset>
             <button class="link btn" type="submit">Показать</button>
           </form>
-<!--        </div>-->
       </section>
-
-      <section class="catalog">
-       
-<!--        <div class="wrapper">-->
+      <section class="catalog">       
           <h2 class="visually-hidden">Товары раздела Моноподы для селфи</h2>
           <div class="sort-wrapper">
             <p class="catalog-title">Сортировка:</p>
@@ -264,14 +256,11 @@
               <a class="link" href="#">Вперед</a>
             </li>
           </ul>
-<!--        </div>-->
       </section>
-
     </div>
-
   </main>
 
-  <footer class="main-footer">
+  <footer class="main-footer monopods-footer">
     <div class="footer-top">
       <a class="logo" href="index.html">Device</a>
       <div class="user-menu">
